# routes/tiendas/categoriaTiendasRoute.js
@@ -4,7 +4,7 @@ var categoriaTiendaRouter = express.Router();
 const authenticateToken = require("../../middlewares/authenticateToken");
 
 categoriaTiendaRouter.post('/listarCategoriaTiendas', categoriaTiendaController.getCategoriaTiendas);
-categoriaTiendaRouter.get('/listarCategoriaTiendasWeb', authenticateToken,categoriaTiendaController.getCategoriaTiendas);
+categoriaTiendaRouter.get('/listarCategoriaTiendasWeb', authenticateToken,categoriaTiendaController.getCategoriaTiendasWeb);
 categoriaTiendaRouter.post('/crearCategoriaTiendaWeb', categoriaTiendaController.crearCategoriaTiendaWeb);
 categoriaTiendaRouter.post('/editarCategoriaTiendaWeb', categoriaTiendaController.editarCategoriaTiendaWeb);
 module.exports = categoriaTiendaRouter;
